fix opacity & z-index bug

--- a/yayanblog/static/css/index.css
+++ b/yayanblog/static/css/index.css
@@ -65,46 +65,6 @@
     transition:0.3s;
 }
 
-/*css动画
-1.用keyframes 创建动画，不同浏览器需要加不同的前缀+动画名称
-2.为元素绑定动画
-
-*/
-@keyframes ch_pic_animation
-{
-0%   {opacity:0.1;border-radius:50px;}
-100% {opacity:1;border-radius:5px;}
-}
-
-@-moz-keyframes ch_pic_animation /* Firefox */
-{
-0%   {opacity:0.1;border-radius:50px;}
-100% {opacity:1;border-radius:5px;}
-}
-
-@-webkit-keyframes ch_pic_animation /* Safari 和 Chrome */
-{
-0%   {opacity:0.1;border-radius:50px;}
-100% {opacity:1;border-radius:5px;}
-}
-/*2.为元素绑定动画：
-浏览器前缀-animation:animation-name，duration,(其他属性)
-(每个浏览器前缀都要绑定一次)
-
-*/
-#ch_pic_animation{
-    -webkit-animation:ch_pic_animation 2s;
-    -moz-animation: ch_pic_animation 2s;
-    animation:ch_pic_animation 2s;
-
-}
-
-.active_pic img{
-    -webkit-animation: ch_pic_animation 2s;
-    -moz-animation: ch_pic_animation 2s;
-    animation: ch_pic_animation 2s;
-}
-
 
 
 /*轮播图大图*/
@@ -116,16 +76,20 @@
 /*为了解决动画中opacity导致最后一张图总是透在当前图后面，为4张图设置了层级*/
 .recommend_big_item:nth-child(1){
     z-index:104;
+    opacity: 0.2;
 }
 
 .recommend_big_item:nth-child(2){
     z-index:103;
+    opacity: 0.2;
 }
 .recommend_big_item:nth-child(3){
     z-index:102;
+    opacity: 0.2;
 }
 .recommend_big_item:nth-child(4){
     z-index:101;
+    opacity: 0.2;
 }
 
 
@@ -133,8 +97,46 @@
 /*为了覆盖上面的css，所以.active_pic 前添加id选择器来增大选择器分值去覆盖上面z-index*/
 #recommend_slide .active_pic{
     z-index: 105;
+    opacity:1;
 
 }
+/*css动画
+1.用keyframes 创建动画，不同浏览器需要加不同的前缀+动画名称
+2.为元素绑定动画
+3.问题：动画设置的属性和给元素单独设置的属性重复了，那么会在动画结束后以单独设置的属性为准
+*/
+@keyframes ch_pic_animation
+{
+0%   {opacity:0.2;border-radius:30px;}
+100% {opacity:1;border-radius:5px;}
+}
+
+@-moz-keyframes ch_pic_animation /* Firefox */
+{
+0%   {opacity:0.2;border-radius:30px;}
+100% {opacity:1;border-radius:5px;}
+}
+
+@-webkit-keyframes ch_pic_animation /* Safari 和 Chrome */
+{
+0%   {opacity:0.2;border-radius:30px;}
+100% {opacity:1;border-radius:5px;}
+}
+
+
+/*2.为元素绑定动画：
+浏览器前缀-animation:animation-name，duration,(其他属性)
+(每个浏览器前缀都要绑定一次)
+
+*/
+
+#recommend_slide .active_pic img{
+    -webkit-animation: ch_pic_animation 3s;
+    -moz-animation: ch_pic_animation 3s;
+    animation: ch_pic_animation 3s;
+}
+
+
 
 
 
